--- a/package.json
+++ b/package.json
@@ -17,4 +17,12 @@
     "url": "https://github.com/haideralsh/result-ts/issues"
   },
   "homepage": "https://github.com/haideralsh/result-ts#readme"
+    "homepage": "https://github.com/haideralsh/result-ts#readme",
+    "devDependencies": {
+        "@types/jest": "^26.0.16",
+        "jest": "^26.6.3",
+        "prettier": "2.2.1",
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.2"
+    },
 }
