--- a/package.json
+++ b/package.json
@@ -25,4 +25,10 @@
         "ts-jest": "^26.4.4",
         "typescript": "^4.1.2"
     },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true
+    },
 }
