Add jest config

--- a/package.json
+++ b/package.json
@@ -31,4 +31,8 @@
         "semi": false,
         "singleQuote": true
     },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node"
+    }
 }
