Add commands: build, fmt, and test

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
+    "scripts": {
+        "build": "tsc",
+        "fmt": "prettier --write .",
+        "test": "jest"
+    },
     "url": "git+https://github.com/haideralsh/result-ts.git"
   },
   "keywords": [],
