--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "trailingComma": "es5",
         "tabWidth": 4,
         "semi": false,
+        "proseWrap": "always",
         "singleQuote": true
     },
     "jest": {
