Rename to @haideralsh/result-ts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "result-ts",
+    "name": "@haideralsh/ts-result",
     "version": "0.1.0",
     "description": "A zero-dependency Result type for typescript inspired by Rust",
     "files": [
